@@ -1,3 +1,7 @@
+2005-06-15  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl (tkjabber::cleanup): Cleanup roster too.
+
 2005-06-14  Daniel South  <wildcard_25@users.sourceforge.net>
 
 	* tkchat.tcl:
